docker: adjust develop/Dockerfile to work on aarch64
Breaks out ci/Dockerfile into a common dockerfile (and dockerfile.finish) (includes everything except what's needed for 32 bit builds)
Introduces ci/32bit which inherits from common/dockerfile(.finish). This is what is ran by CI.

Signed-off-by: Pasta <pasta@dashboost.org>

--- a/contrib/containers/develop/Dockerfile
+++ b/contrib/containers/develop/Dockerfile
@@ -2,7 +2,8 @@
 
 FROM ubuntu:focal
 
-INCLUDE+ ci/Dockerfile
+INCLUDE+ ci/common/Dockerfile
+INCLUDE+ ci/common/Dockerfile.finish
 
 # The inherited Dockerfile switches to non-privileged context and we've
 # just started configuring this image, give us root access
