--- a/contrib/containers/deploy/Dockerfile
+++ b/contrib/containers/deploy/Dockerfile
@@ -10,10 +10,10 @@ ENV HOME /home/dash
 # add user with specified (or default) user/group ids
 ENV USER_ID ${USER_ID:-1000}
 ENV GROUP_ID ${GROUP_ID:-1000}
-RUN groupadd -g ${GROUP_ID} dash
-RUN useradd -u ${USER_ID} -g dash -s /bin/bash -m -d /home/dash dash
-RUN mkdir /home/dash/.dashcore
-RUN chown ${USER_ID}:${GROUP_ID} -R /home/dash
+RUN groupadd -g ${GROUP_ID} dash && \
+    useradd -u ${USER_ID} -g dash -s /bin/bash -m -d /home/dash dash && \
+    mkdir /home/dash/.dashcore && \
+    chown ${USER_ID}:${GROUP_ID} -R /home/dash
 
 COPY bin/* /usr/local/bin/
 
