contrib: set the working directory to /src/dash to allow for cloning gitian dependencies

--- a/contrib/containers/ci/Dockerfile
+++ b/contrib/containers/ci/Dockerfile
@@ -101,14 +101,16 @@ RUN \
   update-alternatives --set x86_64-w64-mingw32-g++  /usr/bin/x86_64-w64-mingw32-g++-posix; \
   exit 0
 
-RUN mkdir /dash-src && \
+RUN \
+  mkdir -p /src/dash && \
   mkdir -p /cache/ccache && \
   mkdir /cache/depends && \
   mkdir /cache/sdk-sources && \
-  chown $USER_ID:$GROUP_ID /dash-src && \
+  chown $USER_ID:$GROUP_ID /src && \
+  chown $USER_ID:$GROUP_ID -R /src && \
   chown $USER_ID:$GROUP_ID /cache && \
-  chown $USER_ID:$GROUP_ID /cache -R
+  chown $USER_ID:$GROUP_ID -R /cache
 
-WORKDIR /dash-src
+WORKDIR /src/dash
 
 USER dash
