refactor: replace util::Ref with CoreContext (std::variant)
Co-authored-by: UdjinM6 <UdjinM6@users.noreply.github.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -152,6 +152,7 @@ BITCOIN_CORE_H = \
   compat/endian.h \
   compat/sanity.h \
   compressor.h \
+  context.h \
   consensus/consensus.h \
   consensus/tx_check.h \
   consensus/tx_verify.h \
@@ -306,7 +307,6 @@ BITCOIN_CORE_H = \
   util/message.h \
   util/moneystr.h \
   util/ranges.h \
-  util/ref.h \
   util/serfloat.h \
   util/settings.h \
   util/string.h \
