--- a/Makefile.am
+++ b/Makefile.am
@@ -192,6 +192,7 @@ LCOV_FILTER_PATTERN = \
 	-p "/usr/include/" \
 	-p "/usr/lib/" \
 	-p "/usr/lib64/" \
+	-p "src/dashbls/" \
 	-p "src/leveldb/" \
 	-p "src/crc32c/" \
 	-p "src/bench/" \
