--- a/contrib/containers/ci/32bit/Dockerfile
+++ b/contrib/containers/ci/32bit/Dockerfile
@@ -2,6 +2,8 @@
 
 FROM ubuntu:focal
 
+ENV APT_ARGS="-y --no-install-recommends --no-upgrade"
+
 RUN dpkg --add-architecture i386
 
 RUN apt-get update && apt-get install $APT_ARGS \
