--- a/contrib/containers/deploy/Dockerfile.GitHubActions.Gitian
+++ b/contrib/containers/deploy/Dockerfile.GitHubActions.Gitian
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1.3
-FROM ubuntu:focal
+FROM debian:buster
 LABEL maintainer="Dash Developers <dev@dash.org>"
 LABEL description="Dockerised DashCore"
 
