--- a/contrib/gitian-descriptors/gitian-win-signer.yml
+++ b/contrib/gitian-descriptors/gitian-win-signer.yml
@@ -1,8 +1,8 @@
 ---
 name: "dash-win-signer"
-distro: "ubuntu"
+distro: "debian"
 suites:
-- "focal"
+- "buster"
 architectures:
 - "amd64"
 packages:
