--- a/contrib/containers/ci/Dockerfile
+++ b/contrib/containers/ci/Dockerfile
@@ -4,6 +4,6 @@ FROM ubuntu:focal
 RUN dpkg --add-architecture i386
 
 INCLUDE+ common/Dockerfile
-INCLUDE+ 32bit/Dockerfile
+INCLUDE+ i386/Dockerfile
 
 INCLUDE+ common/Dockerfile.finish
