--- a/.github/workflows/guix-build.yml
+++ b/.github/workflows/guix-build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Hash Dockerfile
         id: dockerfile
         run: |
-          echo "::set-output name=hash::$(sha256sum ./contrib/guix/Dockerfile | cut -d ' ' -f1)"
+          echo "::set-output name=hash::$(sha256sum ./contrib/guix/Dockerfile.ci | cut -d ' ' -f1)"
 
       - name: Cache Docker layers
         uses: actions/cache@v2
@@ -33,8 +33,8 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./contrib/guix/Dockerfile
+          context: ./contrib/guix
+          file: ./Dockerfile.ci
           load: true
           tags: alpine-guix:latest
           cache-from: type=local,src=/tmp/.buildx-cache
