--- a/.github/workflows/guix-build.yml
+++ b/.github/workflows/guix-build.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           docker run --privileged -d --rm -t \
             --name guix-daemon \
-            -e ADDITIONAL_GUIX_COMMON_FLAGS='--max-jobs=32' \
+            -e ADDITIONAL_GUIX_COMMON_FLAGS="--max-jobs=$(nproc --all)" \
             -v ${{ github.workspace }}:/src/dash \
             -w /src/dash \
             guix_ubuntu:latest && \
