contrib: allow defining a workspace path as argument

--- a/.github/workflows/guix-build.yml
+++ b/.github/workflows/guix-build.yml
@@ -55,7 +55,7 @@ jobs:
             -v ${{ github.workspace }}:/src/dash \
             -w /src/dash \
             guix_ubuntu:latest && \
-          docker exec guix-daemon bash -c "/usr/local/bin/guix-start"
+          docker exec guix-daemon bash -c '/usr/local/bin/guix-start'
 
       - name: Ensure build passes
         run: |
