--- a/contrib/containers/ci/common/Dockerfile.finish
+++ b/contrib/containers/ci/common/Dockerfile.finish
@@ -2,6 +2,15 @@
 
 FROM ubuntu:focal
 
+ARG USER_ID=1000
+ARG GROUP_ID=1000
+
+# Add user with specified (or default) user/group ids
+ENV USER_ID ${USER_ID}
+ENV GROUP_ID ${GROUP_ID}
+RUN groupadd -g ${GROUP_ID} dash
+RUN useradd -u ${USER_ID} -g dash -s /bin/bash -m -d /home/dash dash
+
 RUN \
   mkdir -p /src/dash && \
   mkdir -p /cache/ccache && \
