--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -14,6 +14,7 @@ packages:
 - "bison"
 - "bsdmainutils"
 - "ca-certificates"
+- "cmake"
 - "curl"
 - "faketime"
 - "g++-8"
@@ -24,6 +25,7 @@ packages:
 - "pkg-config"
 - "python3"
 - "python3-pip"
+- "python3-setuptools"
 - "libxkbcommon0"
 - "ccache"
 # Cross compilation HOSTS:
@@ -110,6 +112,7 @@ script: |
   done
   }
 
+  pip3 install --upgrade pip setuptools wheel
   pip3 install lief==0.12.1
 
   # Faketime for depends so intermediate results are comparable
