--- a/contrib/containers/guix/docker-compose.yml
+++ b/contrib/containers/guix/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  guix_ubuntu:
+  guix_debian:
     build:
       context: '../../..'
       additional_contexts:
@@ -9,7 +9,7 @@ services:
       args:
         USER_ID: 1000   # set this to $(id -u) of the host
         GROUP_ID: 1000  # set this to $(id -g) of the host
-    container_name: guix_ubuntu
+    container_name: guix_debian
     tty: true
     stdin_open: true
     privileged: true
