contrib: add Dash substitution server to Guix container

--- a/contrib/containers/guix/Dockerfile
+++ b/contrib/containers/guix/Dockerfile
@@ -49,7 +49,8 @@ RUN guix_file_name=guix-binary-${guix_version}.$(uname -m)-linux.tar.xz         
 
 RUN touch /etc/nsswitch.conf
 
-RUN guix archive --authorize < /usr/local/guix/current/share/guix/ci.guix.gnu.org.pub && \
+RUN wget -qO- http://24.199.108.240/signing-key.pub | guix archive --authorize && \
+    guix archive --authorize < /usr/local/guix/current/share/guix/ci.guix.gnu.org.pub && \
     guix archive --authorize < /usr/local/guix/current/share/guix/bordeaux.guix.gnu.org.pub
 
 # Build Environment Setup
